# jira-asset-manager

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
jira/: __init__.py  __main__.py  cli.py  config.py  jira.py  utils.py
jira_amt/: __init__.py  __main__.py  cli.py  config.py  jira.py
tests/: conftest.py  test_jira.py  test_utils.py
