[tool.poetry]
name = "jira-amt"
version = "1.1.1"
license = "MIT"
description = "Manage Jira assets."
authors = ["Arash Hatami <hatamiarash7@gmail.com>"]
readme = "README.md"
homepage = "https://arash-hatami.ir"
repository = "https://github.com/hatamiarash7/jira-asset-manager"
keywords = ["jira", "asset"]
classifiers = [
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable"
]
packages = [{include = "jira_amt"}]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2"
urllib3 = "^1"
tomlkit = "^0.11.8"

[tool.poetry.group.test.dependencies]
pytest = "^7"

[tool.poetry.dev-dependencies]
pytest = "^7"

[tool.poetry.scripts]
jira-amt = "jira_amt.cli:app"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/hatamiarash7/jira-asset-manager/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
