[tool.poetry]
authors = [
  "Arash Hatami <hatamiarash7@gmail.com>",
]
classifiers = [
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
]
description = "Manage Jira assets."
homepage = "https://arash-hatami.ir"
keywords = [
  "jira",
  "asset",
]
license = "MIT"
name = "jira-amt"
packages = [
  {include = "jira_amt"},
]
readme = "README.md"
repository = "https://github.com/hatamiarash7/jira-asset-manager"
version = "1.3.1"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2"
tomlkit = "^0.12.0"
typer = {extras = [
  "all",
], version = "^0.9.0"}
urllib3 = "^1"

[tool.poetry.group.test.dependencies]
pytest = "^7"

[tool.poetry.dev-dependencies]
pytest = "^7"

[tool.poetry.scripts]
jira-amt = "jira_amt.cli:app"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/hatamiarash7/jira-asset-manager/issues"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1.0.0",
]
